cập nhật database thêm favorite
